--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,24 +19,32 @@ mybatis-plus:
       logic-delete-field: isDeleted
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
-
-# springdoc-openapi项目配置
 springdoc:
+  api-docs:
+    enabled: true
+    path: /doc-api.html
   swagger-ui:
     path: /swagger-ui.html
-    tags-sorter: alpha
-    operations-sorter: alpha
-  api-docs:
-    path: /v3/api-docs
-  group-configs:
-    - group: 'default'
-      paths-to-match: '/**'
-      packages-to-scan: com.xyh.backendcenter
+    disable-swagger-default-url: on
+
+
+# springdoc-openapi项目配置
+#springdoc:
+#  swagger-ui:
+#    path: /swagger-ui.html
+#    tags-sorter: alpha
+#    operations-sorter: alpha
+#  api-docs:
+#    path: /v3/api-docs
+#  group-configs:
+#    - group: 'default'
+#      paths-to-match: '/**'
+#      packages-to-scan: com.xyh.backendcenter
 # knife4j的增强配置，不需要增强可以不配
-knife4j:
-  enable: true
-  setting:
-    language: zh_cn
+#knife4j:
+#  enable: true
+#  setting:
+#    language: zh_cn
 sa-token:
   # token 名称（同时也是 cookie 名称）
   token-name: token
