--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,6 @@ spring:
     url: jdbc:mysql://localhost:3306/backend_center
     username: root
     password: 1111
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
@@ -48,8 +45,8 @@ springdoc:
 sa-token:
   # token 名称（同时也是 cookie 名称）
   token-name: token
-  # token 有效期（单位：秒） 默认30天，-1 代表永久有效
-  timeout: 2592000
+  # token 有效期（单位：秒） 默认30天，-1 代表永久有效  7天
+  timeout: 604800
   # token 最低活跃频率（单位：秒），如果 token 超过此时间没有访问系统就会被冻结，默认-1 代表不限制，永不冻结
   active-timeout: -1
   # 是否允许同一账号多地同时登录 （为 true 时允许一起登录, 为 false 时新登录挤掉旧登录）
@@ -58,4 +55,16 @@ sa-token:
   is-share: false
   # token 风格（默认可取值：uuid、simple-uuid、random-32、random-64、random-128、tik）
   token-style: uuid
+  token-prefix: Bearer
+
+# 对象存储
+# todo 需替换配置
+cos:
+  client:
+    secretId: xxx
+    secretKey: xxx
+    region: xxx
+    bucket: xxx
+
+
 
